; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_modify_index_and_checkout_tree.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_modify_index_and_checkout_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4
@GIT_RESET_HARD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @modify_index_and_checkout_tree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @modify_index_and_checkout_tree(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* @g_repo, align 4
  %7 = call i32 @git_repository_index(i32** %3, i32 %6)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @g_repo, align 4
  %10 = call i32 @git_repository_head(i32** %4, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %14 = call i32 @git_reference_peel(i32** %5, i32* %12, i32 %13)
  %15 = call i32 @cl_git_pass(i32 %14)
  %16 = load i32, i32* @g_repo, align 4
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @GIT_RESET_HARD, align 4
  %19 = call i32 @git_reset(i32 %16, i32* %17, i32 %18, i32* null)
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = load i32, i32* @g_repo, align 4
  %22 = call i32 @assert_status_entrycount(i32 %21, i32 0)
  %23 = call i32 (...) @modify_index_ondisk()
  %24 = load i32, i32* @g_repo, align 4
  %25 = load i32*, i32** %5, align 8
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @git_checkout_tree(i32 %24, i32* %25, i32* %26)
  %28 = call i32 @cl_git_pass(i32 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @git_object_free(i32* %29)
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @git_reference_free(i32* %31)
  %33 = load i32*, i32** %3, align 8
  %34 = call i32 @git_index_free(i32* %33)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @git_repository_head(i32**, i32) #1

declare dso_local i32 @git_reference_peel(i32**, i32*, i32) #1

declare dso_local i32 @git_reset(i32, i32*, i32, i32*) #1

declare dso_local i32 @assert_status_entrycount(i32, i32) #1

declare dso_local i32 @modify_index_ondisk(...) #1

declare dso_local i32 @git_checkout_tree(i32, i32*, i32*) #1

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
